--- a/package.json
+++ b/package.json
@@ -1,5 +1,9 @@
 {
   "dependencies": {
     "cypress": "^13.2.0"
+  },
+  "scripts": {
+    "cypress:open": "cypress open",
+    "cypress:run" : "cypress run"
   }
 }
